2013-11-14  Andreas Schwab  <schwab@suse.de>

	* locale/C-address.c (_nl_C_LC_ADDRESS): Set country_num to zero
	word instead of empty string.

2013-11-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/fe_nomask.c
	(__fe_nomask_env): Fir compat symbol to be remove for GLIBC_2.19.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_nomask.c
	(__fe_nomask_env): Likewise.

2013-11-13  Steve Ellcey  <sellcey@mips.com>

	* benchtests/bench-timing.h: Include time.h.

2013-11-13  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #15997]
	* sysdeps/unix/sysv/linux/configure.ac (arch_minimum_kernel): Set
	to 3.4.0 for x32.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

2013-11-13  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16151]
	* stdlib/strtod_l.c (round_and_return): Do not consider
	retval[RETURN_LIBM_SIZE - 1] when determining more_bits for an
	exponent one less than half the least subnormal exponent.
	* stdlib/test-strtod-round-data: Add more tests.
	* stdlib/tst-strtod-round.c (tests): Regenerated.

2013-11-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #14143]
	* sysdeps/powerpc/bits/fenv.h (__fe_nomask_env): Remove declaration.
	(__fe_mask_env): Likewise.
	* sysdeps/powerpc/fpu/fenv_libc.h (__fe_nomask_env): Remove
	libm_hidden_proto and add function prototype.
	(__fe_mask_env): Add function prototype.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/fe_nomask.c
	(__fe_nomask_env): Add compat symbol for GLIBC_2.1.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_mask.c
	(__fe_mask_env): Remove compiler warnings regarding ununsed variables.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_nomask.c
	(__fe_nomask_env): Add compat symbol for GLIBC_2.3.

2013-11-13  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

        * elf/dl-lookup.c (_dl_lookup_symbol_x): If UNDEF_MAP is false
	set reference_name to "" to avoid passing NULL to DSO_FILENAME.
