@@ -460,6 +460,7 @@ DEFINE_LANGUAGE_CODE ("Telugu", te, tel, tel)
 DEFINE_LANGUAGE_CODE3 ("Tereno", ter, ter)
 DEFINE_LANGUAGE_CODE3 ("Tetum", tet, tet)
 DEFINE_LANGUAGE_CODE ("Thai", th, tha, tha)
+DEFINE_LANGUAGE_CODE3 ("Tharu, Chitwani", the, the)
 DEFINE_LANGUAGE_CODE ("Tibetan", bo, bod, tib)
 DEFINE_LANGUAGE_CODE3 ("Tigre", tig, tig)
 DEFINE_LANGUAGE_CODE ("Tigrinya", ti, tir, tir)
