@@ -18,7 +18,7 @@ Version 2.19
   15887, 15890, 15892, 15893, 15895, 15897, 15905, 15909, 15917, 15919,
   15921, 15923, 15939, 15948, 15963, 15966, 15985, 15988, 15997, 16032,
   16034, 16036, 16037, 16041, 16071, 16072, 16074, 16078, 16103, 16112,
-  16143, 16150, 16151, 16153.
+  16143, 16150, 16151, 16153, 16172.
 
 * CVE-2012-4412 The strcoll implementation caches indices and rules for
   large collation sequences to optimize multiple passes.  This cache
@@ -51,7 +51,7 @@ Version 2.19
   for AF_INET6 has been fixed (Bugzilla #16072).
 
 * New locales: ak_GH, anp_IN, ar_SS, cmn_TW, hak_TW, lzh_TW, nan_TW, pap_AW,
-  pap_CW, quz_PE
+  pap_CW, quz_PE, the_NP.
 
 * Substantially revised locales: gd_GB, ht_HT
 
